page quem somos criada

--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -106,8 +106,8 @@
                     <i class="material-icons prev anterior small">arrow_back</i>
                     <i class="material-icons next proximo small">arrow_forward</i>
                 </div>
-                </>
             </div>
+        </div>
     </main>
 
     <footer class="page-footer red darken-4">
@@ -125,7 +125,7 @@
 
                         <div class="col s2 m2 offset-m1 l3 offset-l4 imagensfooter center">
                             <i class="material-icons email small">mail</i>
-                            <a href="./pages/contatos.html">
+                            <a href="../pages/contatos.html">
                                 <span class="contatoemail">dunamis_graf@hotmail.com</span>
                             </a>
                         </div>
