--- a/pages/quemSomos.html
+++ b/pages/quemSomos.html
@@ -54,9 +54,38 @@
                 <section class="col s12 m12 l12 center">
                     <h3>Quem Somos</h3>
                     <div class="row">
-                        <div class="col s12 m12 l12 cardquemsomos">
-                            card com mensagem
+                        <div class="col s12 m12 l12 cardquemsomos z-depth-4">
+
+                            <img src="../img/Logo_dunamisGraf.png" alt="">
+                            <p>
+                                A <b class="dunamis">Dunamis</b> é uma empresa especializada<br> na Impressão Serigráfica e Silk-Screen de Placas de Sinalização, Painéis Frontais, Etiquetas e Adesivos nos mais diversos produtos, entre eles <b>Poliestireno, PVC, Policarbonato</b>                                e <b>Vinil Adesivo.</b>
+                            </p>
+                            <p class=" atendimento">
+                                <b>Atendemos:</b> Indústrias, Comércios, Âgencias de Publicidade, Promoção e Eventos. Empresas diversas do segmento de serviços e brindes, além de particulares.
+                            </p>
+
                         </div>
+
+                        <div class="col s12 m12 l12 cardquemsomos card2 z-depth-4">
+                            <p class="semborder">
+                                A excelência da nossa entrega está alicerçada em 4 Pilares:
+                            </p>
+                            <p>
+                                <ul class="lista">
+                                    <li>* Mão de obra qualificada</li>
+                                    <li>* Materiais de alta qualidade</li>
+                                    <li>* Preço justo e competitivo</li>
+                                    <li>* Excelência de atendimento</li>
+                                </ul>
+                            </p>
+                        </div>
+
+                        <div class="col s12 m12 l12 cardquemsomos card3 z-depth-5">
+                            <span>
+                                Nossa maior satisfação é atender bem, para atender sempre.
+                            </span>
+                        </div>
+
                     </div>
                 </section>
             </div>
@@ -79,7 +108,7 @@
 
                         <div class="col s2 m2 offset-m1 l3 offset-l4 imagensfooter center">
                             <i class="material-icons email small">mail</i>
-                            <a href="./pages/contatos.html">
+                            <a href="../pages/contatos.html">
                                 <span class="contatoemail">dunamis_graf@hotmail.com</span>
                             </a>
                         </div>
