--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -55,14 +55,24 @@
                     <h3>Contatos</h3>
                     <div class="row">
                         <div class="col s12 m4 l5 cardmensagem">
-                            card com mensagem
+                            <img class="icon-info responsive-img" src="../img/icone info.png">
+                            <span class="white-text">
+                                <p> 
+                                 Para mais informações sobre nossos produtos ou fazer um orçamento,
+                                 utilize nosso formulário de contato
+                                 ou entre em contato também pelos nossos whatsApps.
+                                 Teremos um imenso prazer em atender você e sua empresa!
+                                </p>
+                                <p> (11) 95242-9604 </p>
+                                <p> (11) 95242-9604 </p>
+                            </span>
                         </div>
 
                         <div class="col s12 m7 offset-m1 l6 offset-l1 formulario">
                             <form action="http://formmail.kinghost.net/formmail.cgi" method="POST" class="form">
                                 <input type="hidden" name="recipient" value="dunamis_graf@hotmail.com">
                                 <!-- Pode ser qualquer endereço de email -->
-                                <input class="localHref" type="hidden" name="redirect" value="http://localhost:8080/pages/contatos.html">
+                                <input  type="hidden" name="redirect" value="http://localhost:8080/pages/contatos.html">
                                 <!-- Após o envio, o usuário será redirecionado para a página configurada aqui -->
                                 <input type="hidden" name="subject" value="assunto">
                                 <!-- Assunto da mensagem -->
